fix menu item total only show one charater when collapsed

--- a/src/styles/LayoutContainer.scss
+++ b/src/styles/LayoutContainer.scss
@@ -14,3 +14,7 @@
   .site-layout-background {
     background: #fff;
   }
+
+  .layout-submenu-popup {
+    min-width: 200px;
+  }
